fixed a bug that display change in wrong color

--- a/client/src/CSS/PortfolioOverview.css
+++ b/client/src/CSS/PortfolioOverview.css
@@ -16,7 +16,7 @@
     color: #52e552;
 }
 
-PortfolioOverview__change-message .decrease{
+.PortfolioOverview__change-message .decrease{
     color: #ff0000;
 }
 
